# weaviate-ml

./: .env_samples  .gitattributes  .gitignore  README.md  app.py  create_collection.py  docker-compose.yml  pyproject.toml  run_frontend.sh
data/: postings_clustered.csv  rss_feed_articles.csv
scripts/: cluster_data.py  create_dataset.py  index.py  search.py
src/clustering/: text_clustering.py
src/dataset/: rssfeedfetcher.py
src/frontend/pages/: home.py  job_analytics.py  search.py
src/weaviate_ml/: __init__.py  weaviate_indexer.py  weaviate_searcher.py
